Fix links overflowing their container in IE10/11
Set max-width to fix links overflowing in IE10/11 in the mobile viewport.

https://github.com/philipwalton/flexbugs#2-column-flex-items-set-to-align-itemscenter-overflow-their-container

--- a/src/govuk/objects/_button-group.scss
+++ b/src/govuk/objects/_button-group.scss
@@ -41,6 +41,9 @@
     .govuk-link {
       @include govuk-font($size: 19, $line-height: 19px);
       display: inline-block;
+      // Prevent links overflowing their container in IE10/11 because of bug
+      // with align-items: center
+      max-width: 100%;
       margin-top: $link-spacing;
       margin-bottom: $link-spacing + $vertical-gap;
       text-align: center;
